tests/ui/pinned_drop/conditional-drop-impl.stderr
error[E0401]: can't use generic parameters from outer function
  --> $DIR/conditional-drop-impl.rs:21:50
   |
11 |     fn drop(&mut self) {}
   |        ---- try adding a local generic parameter in this method instead
...
21 |     impl<T: Unpin> PinnedDrop for PinnedDropImpl<T> {
   |          - type parameter from outer function    ^ use of generic parameter from outer function

error[E0367]: `Drop` impl requires `T: Unpin` but the struct it is implemented for does not
 --> $DIR/conditional-drop-impl.rs:9:9
  |
9 | impl<T: Unpin> Drop for DropImpl<T> {
  |         ^^^^^
  |
note: the implementor must specify the same requirement
 --> $DIR/conditional-drop-impl.rs:5:1
  |
5 | / struct DropImpl<T> {
6 | |     f: T,
7 | | }
  | |_^

error[E0367]: `Drop` impl requires `T: Unpin` but the struct it is implemented for does not
  --> $DIR/conditional-drop-impl.rs:14:1
   |
14 | / pin_project! {
15 | |     //~^ ERROR E0367
16 | |     struct PinnedDropImpl<T> {
17 | |         #[pin]
...  |
23 | |     }
24 | | }
   | |_^
   |
note: the implementor must specify the same requirement
  --> $DIR/conditional-drop-impl.rs:14:1
   |
14 | / pin_project! {
15 | |     //~^ ERROR E0367
16 | |     struct PinnedDropImpl<T> {
17 | |         #[pin]
...  |
23 | |     }
24 | | }
   | |_^
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
